--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "my-app",
   "type": "module",
   "private": true,
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
+    "db:push": "drizzle-kit push:mysql --config db/config.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@planetscale/database": "^1.16.0",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "drizzle-orm": "^0.30.1",
+    "next": "14.2.0-canary.12",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.0-canary.12"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "drizzle-kit": "^0.20.14",
+    "jiti": "^1.21.0",
+    "typescript": "^5"
   }
 }
